# calmapp

./: pyproject.toml
.github/workflows/: main.yml
calmapp/: __init__.py  app.py  app_config.py
calmapp/plugins/: README.md  __init__.py  database_plugin.py  database_plugin_config.py  gpt_plugin.py  langchain_plugin.py  logging_plugin.py  message_history_plugin.py  plugin.py  scheduler_plugin.py  whisper_plugin.py
calmapp/plugins/beta/: __init__.py
calmapp/plugins/gpts/: gpt_engine_plugin.py  gpt_plugin.py  langchain_plugin.py  light_llm_plugin.py  openai_plugin.py
calmapp/plugins/projects/: __init__.py  abstract-tool-user_app.py  archivist-bot_app.py  forwarder-bot_lib.py  gpt-assistant_lib.py  outstanding-items-bot_app.py
calmapp/ui/: ui_fastui.py  ui_streamlit_app.py  ui_telegram_bot.py  ui_typer_cli.py
dev/: DEV_README.md  dev.ipynb
tests/: test_app.py
