[tool.poetry]
name = "calmapp"
version = "0.1.6" # rework app.run - support new style dp.start_polling
description = ""
authors = ["Petr Lavrov <calmmage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
# for stability, use frozen-app-name branch
calmlib = { git = "https://github.com/calmmage/calmlib.git", branch = "main" }
#calmmage = { git = "https://github.com/calmmage/calmmage.git", branch = "main" }
pytest = "*"
# logging
loguru = "*"
toml = "*"
# be wary, langchain-pydantic compatibility: https://python.langchain.com/v0.1/docs/guides/development/pydantic_compatibility/
pydantic = ">=2"
pydantic-settings = ">=2"


[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
tqdm = "*"
# pandas = "2.1.0"
black = "*"
pre-commit = "*"
aiogram = "*"
streamlit = "*"
fastapi = "*"
openai = "*"
apscheduler = "*"
pydub = "*"
tiktoken = "*"
aiolimiter = "*"
langchain-anthropic = "*"
langchain-openai = "*"
langchain = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[template]
version = "0.2.4"  # update python version because of langchain
url = "https://github.com/calmmage/python-project-template.git"
author = "Petr Lavrov <petrlavrov@calmmage.com>"
description = "Calmmage Python project template"
